--- a/src/publications.njk
+++ b/src/publications.njk
@@ -15,14 +15,16 @@ style: {
 
 \* Lab trainees.
 
+2023
+---
+Chen, X., Teng, X., Chen, H., Pan, Y., Geyer, P. (2024) Toward reliable signal decoding for electroencephalogram: A benchmark study to EEGNeX. *Biomedical Signal Processing and Control, 87*(Part B), 105475.
+[See more](https://www.sciencedirect.com/science/article/pii/S1746809423009084)
+
 2022
 ---
 
 Chang, A., Teng, X., Assaneo, F., & Poeppel, D. (2022). Amplitude modulation perceptually distinguishes music and speech. *PsyArXiv*.
 [Preprint](https://psyarxiv.com/juzrh/)
-
-Chen, X., Teng, X., Chen, H., Pan, Y., Geyer, P. (2022) Toward reliable signal decoding for electroencephalogram: A benchmark study to EEGNeX. *ArXiv*.
-[Preprint](https://arxiv.org/abs/2207.12369)
 
 2021
 ---
